# Natal-Reader

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  natal_chart.txt  pyproject.toml
archive/: astro_styling.css  styling.css
src/natal_reader/: main.py
src/natal_reader/crews/analysis_crew/: __init__.py  analysis_crew.py
src/natal_reader/crews/analysis_crew/config/: agents.yaml  tasks.yaml
src/natal_reader/crews/analysis_merge_crew/: analysis_merge_crew.py
src/natal_reader/crews/analysis_merge_crew/config/: tasks.yaml
src/natal_reader/crews/formatting_crew/: __init__.py  formatting_crew.py
src/natal_reader/crews/gemini_analysis_crew/: gemini_analysis_crew.py
src/natal_reader/crews/gmail_crew/: gmail_crew.py
src/natal_reader/crews/gpt_analysis_crew/: gpt_analysis_crew.py
src/natal_reader/crews/merge_crew/: merge_crew.py
src/natal_reader/crews/review_crew/: review_crew.py
src/natal_reader/tools/: gemini_search_tool.py  gmail_tool_with_attachment.py  google_search_tool.py  qdrant_search_tool.py
src/natal_reader/utils/: astro_styling.css  constants.py  convert_to_pdf.py  decorators.py  gmail_utility_with_attachment.py  immanuel_natal_chart.py  immanuel_transit_chart_utils.py  kerykeion_chart_utils.py  models.py  qdrant_setup.py  screenshot_util.py  subject_selection.py
timings/: timeit_2025-04-23_11-21-11.txt  timeit_2025-04-23_12-00-17.txt  timeit_2025-04-23_12-06-44.txt  timeit_2025-04-23_12-08-06.txt  timeit_20250423_123005.txt  timeit_20250423_125738.txt  timeit_20250423_135729.txt  timeit_20250423_141259.txt  timeit_20250423_151643.txt  timeit_20250423_152431.txt  timeit_20250423_165725.txt  timeit_20250423_171349.txt  timeit_20250423_193810.txt  timeit_20250423_210943.txt
to_review/: analysis_agents.yaml  analysis_tasks.yaml  review_agents.yaml  review_tasks.yaml
(+11 files in other folders)
